# ==================================================================
# © Copyright IBM Corp. 2007
#
# THIS FILE IS PROVIDED UNDER THE TERMS OF THE ECLIPSE PUBLIC LICENSE
# ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS FILE
# CONSTITUTES RECIPIENTS ACCEPTANCE OF THE AGREEMENT.
#
# You can obtain a current copy of the Eclipse Public License from
# http://www.opensource.org/licenses/eclipse-1.0.php
#
# Author:       Ashoka Rao S <ashoka.rao (at) in.ibm.com>
#               Riyashmon Haneefa <riyashh1 (at) in.ibm.com>
# ==================================================================

################################################################################

SUBDIRS = . \
    Linux_DHCPRegisteredProfile \
    Linux_DHCPService \
    Linux_DHCPServiceConfiguration \
    Linux_DHCPGroup \
    Linux_DHCPPool \
    Linux_DHCPHost \
    Linux_DHCPSubnet \
    Linux_DHCPOptions \
    Linux_DHCPParams \
    Linux_DHCPGlobal \
    Linux_DHCPSharednet \
    Linux_DHCPGroupsForEntity \
    Linux_DHCPHostsForEntity \
    Linux_DHCPPoolsForEntity \
    Linux_DHCPSubnetsForEntity \
    Linux_DHCPSharednetsForEntity \
    Linux_DHCPOptionsForEntity \
    Linux_DHCPParamsForEntity \
    Linux_DHCPGlobalForService \
    Linux_DHCPElementConformsToProfile \
    Linux_DHCPServiceConfigurationForService
